# gcp-iam-evidence-collector

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
infra/: interview-project.plan  main.tf  variables.tf
k8s/: cronjob.yaml
src/: main.py
tests/: test_main.py
tests/fixtures/: bindings_dedup.json  expected_service_account_output.json  grouped_routes.json  grouped_sanitization.json  grouped_service_account.json  grouped_unsupported.json
